<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/helpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/help"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/N" />

        <RadioButton
            android:id="@+id/radioS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp" >

        <EditText
            android:id="@+id/contactN1"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/degreN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degre"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/contactN2"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/pointN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/contactN3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/W" />

        <RadioButton
            android:id="@+id/radioE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp" >

        <EditText
            android:id="@+id/contactW1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/degreW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degre"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/contactW2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/pointW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/contactW3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:onClick="search"
        android:text="Search" />

</LinearLayout>